# poe2-stonefist-data

./: .gitattributes  .gitignore  README.md  pyproject.toml  stonefist_build_dataset.py  stonefist_capture.py  stonefist_import_poe2db_mods.py  stonefist_report.py
docs/: README.md  level-82-capture-plan.md
scripts/: const_check.sh  verify.sh
stonefist-archive/mixed-level-captures/: dataset.json  pair_summary.csv  pairs.csv
stonefist-captures/: augment_socket_summary.csv  base_control_summary.csv  capture_targets.csv  dataset.json  glove_mod_coverage.csv  mapping_candidates.csv  mapping_families.csv  mapping_observations.csv  mod_lines.csv  pair_summary.csv  pairs.csv  pairs.jsonl  report.html  transformed_output_only.csv
stonefist-captures/raw/: 20260705-182548-after-7939999b3def.txt  20260705-182643-before-df0ee10dc13a.txt  20260705-182649-after-da63b19fdf43.txt  20260705-182722-after-d1d8cdd074a8.txt  20260705-182733-before-e2eb311b7d02.txt  (+144 more)
stonefist-reference/: glove_mod_pool.csv  glove_mod_pool.json
stonefist_dataset/: __init__.py  augment_controls.py  base_controls.py  coverage.py  explicit_mods.py  item_text.py  mapping.py  pairs.py  paths.py  writers.py
stonefist_reporter/: __init__.py  assets.py  loaders.py  render.py  sections.py
tests/: conftest.py  test_augment_socket_controls.py  test_base_control_reporting.py  test_capture_notes.py  test_capture_target_priorities.py  test_coverage_classification.py  test_explicit_modifier_parsing.py  test_hermetic_pipeline.py  test_mapping_logic.py  test_report_smoke.py  test_stat_normalisation.py
(+472 files in other folders)
